# pku-minic

./: .gitignore  Cargo.toml  README.md  build.rs  hello  hello.S  hello.c  justfile  make_case.py  output.koopa  output.riscv
src/: ast.rs  main.rs  sysy.lalrpop  utils.rs
src/ir2riscv/: analyzer.rs  global.rs  imm.rs  irgen.rs  mod.rs  register.rs  riscv.rs  riscvgen.rs  stack.rs
src/src2ir/: bbexaminer.rs  context.rs  core.rs  error.rs  irgen.rs  mod.rs  mytype.rs  symtable.rs
