[package]
name = "pku-minic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"
lettre = "0.11"

[dependencies]
koopa = "0.0.7"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
once_cell = "1.8.0"
