[package]
name = "pku-minic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
backtrace-on-stack-overflow = "0.3.0"
koopa = "0.0.7"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
miette = "7.2.0"
once_cell = "1.8.0"
